Downgrade the Java requirement from Java 11 to Java 8. The only noticeable change is the replacement of System.Logger, which we replace by java.util.logging.Logger. This means that we lost the ability to let users choose their own logging system, but I think that this issue is minor enough that it is not worth to create a multi-release JAR file for that. The "geoapi-4.0" branch will continue to use System.Logger, consequently this functionality is only delayed to a future PROJ-JNI release.
https://github.com/Kortforsyningen/PROJ-JNI/issues/26